<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"


   >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/row_fotter"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:weightSum="4">

        <RelativeLayout

            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.8">

            <TextView
                android:id="@+id/tvProductTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/product"
                android:textColor="@color/black"
                android:textSize="@dimen/medium16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.2">

            <TextView
                android:id="@+id/tvQuantityTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/quantity"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/medium16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvTotalTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/total_price"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/medium16sp" />

            <TextView
                android:id="@+id/tvPriceTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text=   "@string/price"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/medium16sp"
                android:visibility="gone" />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>